--- a/dom/desafio-04/styles.css
+++ b/dom/desafio-04/styles.css
@@ -13,3 +13,13 @@
 	background-color: gray;
 	width: 50px !important;
 }
+
+.violeta {
+	background-color: blueviolet;
+}
+
+.altinha {
+	height: 30px;
+	border: 3px;
+    border-style: solid;
+}
