--- a/projeto-01-monstro/style.css
+++ b/projeto-01-monstro/style.css
@@ -15,6 +15,8 @@ html {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
 }
 
+/* Área de Score */
+
 .scores {
     display: flex;
 }
@@ -47,4 +49,21 @@ html {
 
 .life-bar .danger {
     background-color: red;
+}
+
+/* Área de Resultado */
+
+.result{
+    display: flex;
+    justify-content: center;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.result .win {
+    color: green;
+}
+
+.result .lose {
+    color: red;
 }
